# Playground

./: .gitignore  MeasureSleep.hip
GraphCapture/: CMakeLists.txt  profiler_support.cc  test_main.cc  test_main.h  xbuild_and_run.sh
HipBlasLt/: CMakeLists.txt  a.out  compile.sh  generate_matrices  hipblaslt_test.cc  input_test.cc  nan_c  nan_check.py  xbuild_and_run.sh
LLVM_test/: .bazelrc  BUILD  WORKSPACE  concatenate.cc  llvm_test  llvm_test.cc  llvm_test.h  yybuild.sh
LLVM_test/crosstool/: BUILD
LibraryQCCL/: CMakeLists.txt  buffer_addressing.hpp  qccl_lib.cc  qccl_lib.h
LibraryRCCL/: CMakeLists.txt  rccl_lib_main.cc
RCCL/: CMakeLists.txt  helpers.cc  test_main.cc  test_main.h  topology.dot
RCCL_bubbles/: CMakeLists.txt  counters.txt  test_main.cc  test_main.h
RadixSort/: CMakeLists.txt  benchmark.cc
RocBlas/: CMakeLists.txt  rocblas_test.cc
SleepKernel/: MeasureSleep.hip
SmallTests/: CMakeLists.txt  build.sh  memcpyPeer.cc  printf_lib.cc  test_main.cc
StreamStress/: sync_test.cpp
TopK/: CMakeLists.txt  bitonic_topk.cu.cc  common_funcs.cu.h  original_benchmark.txt  per_warp_topk.cu.cc  topk_kernel.cu.h  topk_kernel.h  topk_kernel_float.cu.cc  topk_main.cc  xbuild_and_run.sh
common/: common.cc  common.h  common_utils.hpp  example_utils.hpp  function_ref.hpp  gpu_prim.h  hipblaslt_gemm.hpp  mersenne.cc  mersenne.h  roc_profiler.cpp  roc_profiler.h  threading.hpp
radix_sort/: benchmark.cc  example_utils.hpp
